<resources>
    <string name="app_name">Washmak</string>
    <string name="company_name">CinGrous Labs</string>
    <string name="enter_email">Enter email</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="google_signin_icon">google_signin_icon</string>
    <string name="sign_in_with">Sign in with</string>

    <string name="logo">logo</string>
    <string name="close">close</string>
    <string name="message">Scan the QR Code</string>
    <string name="turn_off_flashlight">Turn on Flashlight</string>
    <string name="turn_on_flashlight">Turn off Flashlight</string>
    <string name="title_activity_manager">ManagerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="user_details">User Details</string>
    <string name="add_worker">Add Worker</string>
    <string name="worker_details">Worker Details</string>
    <string name="logout">LogOut</string>
    <string name="name">Name</string>
    <string name="Address">Address</string>
    <string name="time">Time</string>
    <string name="time_pattern">HH:MM</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="workerimageview">WorkerImageView</string>
    <string name="job_assigned">Job Assigned</string>
    <string name="create_account">Create Account</string>
    <string name="email_id">Email Id</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="worker_type">Worker Type</string>
    <string name="worker">Worker</string>
    <string name="manager">Manager</string>
    <string name="profile">Profile</string>
    <string name="sensor_id">Sensor Id</string>
    <string name="floor_number">Floor Number</string>
    <string name="block_number">Block Number</string>
    <string name="add_details">Add Details</string>
    <string name="location">Location</string>
    <string name="add_sensor">Add Sensor</string>
    <string name="title_activity_supervisor">SupervisorActivity</string>
    <string name="assign_job">Assign Job</string>
    <string name="select_user">Select User</string>
    <string name="supervisor">Supervisor</string>
    <string name="user_image">User Image</string>
    <string name="scan_qr_code">Scan QR Code</string>


</resources>
