<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp">

    <ImageButton
        android:background="@color/transparent_blue"
        android:id="@+id/worker_photo_at_add_worker_tab_in_manager_login"
        android:src="@drawable/ic_account_box_black_24dp"
        android:layout_centerHorizontal="true"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/workerimageview"
        android:layout_alignParentTop="true"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/worker_photo_at_add_worker_tab_in_manager_login"
        android:layout_above="@+id/create_account_button_at_add_worker_tab_in_manager_login">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:paddingTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10" >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/worker_name_from_add_worker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="textCapWords" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:paddingTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10" >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/worker_address_from_add_worker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Address"
                    android:inputType="textLongMessage"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:paddingTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/worker_phone_number_from_add_worker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:maxLength="10"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:paddingTop="10dp"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/gender_at_add_student"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/manager_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/manager"
                    android:layout_weight="10"/>

                <RadioButton
                    android:id="@+id/supervisor_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/supervisor"
                    android:layout_weight="10"/>

                <RadioButton
                    android:id="@+id/worker_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/worker"
                    android:layout_weight="10" />

            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:paddingTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10" >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/worker_job_from_add_worker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/assign_job"
                    android:inputType="textEmailAddress"
                    android:visibility="gone"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:paddingTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10" >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/worker_email_from_add_worker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_id"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:passwordToggleDrawable="@drawable/passtogglevisiblebuttom"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent"
                android:layout_weight="10"
                tools:ignore="NestedWeights">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/worker_password_from_add_worker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:layout_weight="80"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"
                app:passwordToggleDrawable="@drawable/passtogglevisiblebuttom"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent"
                tools:ignore="NestedWeights">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/worker_con_password_from_add_worker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:layout_weight="80"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:weightSum="60">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="10"
                    android:text="@string/from"
                    android:textColor="@color/colorAccentText"
                    android:textSize="15sp"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:id="@+id/time_from_from_add_details"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="10"
                    android:text="@string/time_pattern"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp" />

                <ImageButton
                    android:id="@+id/set_time_from_from_add_details"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="10"
                    android:background="@color/zxing_transparent"
                    android:contentDescription="@string/time"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_access_time_black_24dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="10"
                    android:text="@string/to"
                    android:textColor="@color/colorAccentText"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/time_to_from_add_details"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="10"
                    android:text="@string/time_pattern"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp" />

                <ImageButton
                    android:id="@+id/set_time_to_from_add_details"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="10"
                    android:background="@color/zxing_transparent"
                    android:contentDescription="@string/time"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_access_time_black_24dp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:text="@string/create_account"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorPrimaryText"
        android:id="@+id/create_account_button_at_add_worker_tab_in_manager_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
