<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="20sp"
    android:weightSum="5">

    <android.support.design.widget.TextInputLayout
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/sensor_id_from_sensor_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sensor_id"
            android:inputType="textCapWords|number" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/sensor_floor_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/floor_number"
            android:inputType="textCapWords|number" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/sensor_block_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/block_number"
            android:inputType="textCapWords|number" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/sensor_loction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/add_sensor"
        android:text="@string/add_details"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorPrimaryText"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>
