<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/worker_card_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    app:contentPadding="10dp"
    android:padding="10dp"
    android:layout_margin="10dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/worker_profile_from_item"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="Worker_Profile" />

        <TextView
            android:id="@+id/worker_name_from_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/worker_profile_from_item"
            android:text="@string/name" />

        <TextView
            android:id="@+id/worker_email_from_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/worker_name_from_item"
            android:layout_toEndOf="@+id/worker_profile_from_item"
            android:text="@string/email_id" />

        <TextView
            android:id="@+id/worker_phoneno_from_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/worker_profile_from_item"
            android:text="@string/phone_number" />
    </RelativeLayout>

</android.support.v7.widget.CardView>
